Bugfix text overflow

--- a/src/app/admin/schedule/schedule-unit/schedule-unit.component.scss
+++ b/src/app/admin/schedule/schedule-unit/schedule-unit.component.scss
@@ -27,6 +27,8 @@
 
   h2 {
     margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   a {
